--- a/GrapheneTrace/GrapheneTrace.csproj
+++ b/GrapheneTrace/GrapheneTrace.csproj
@@ -13,11 +13,15 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0" />
+    <PackageReference Include="MigraDocCore.DocumentObjectModel" Version="1.3.67" />
+    <PackageReference Include="MigraDocCore.Rendering" Version="1.3.67" />
+    <PackageReference Include="PdfSharpCore" Version="1.3.67" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
     <Folder Include="HeatData\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
